rename themes to custom-themes, fix toast classes not recognized on dark mode

--- a/src/styles/custom-themes.scss
+++ b/src/styles/custom-themes.scss
@@ -230,9 +230,9 @@ $light-theme: mat.define-light-theme(
 }
 
 .toast-success {
-  background-color: $color-positive;
+  background-color: $color-positive !important;
 }
 
 .toast-error {
-  background-color: $color-negative;
+  background-color: $color-negative !important;
 }
